<resources>
    <string name="app_name">Practical Parent</string>
    <string name="nameofourapp">NameOfOurApp</string>
    <string name="toss_a_coin">Toss A Coin!!!</string>
    <string name="clam_alarm">Clam Alarm!!!</string>
    <string name="minutes">minutes</string>
    <string name="i_want">I want</string>
    <string name="main_childrenButton">Children</string>
    <string name="main_timeoutButton">Timeout Timer</string>
    <string name="main_coinflipButton">Flip Coin</string>
    <string name="main_actionsLabel">Actions</string>
    <string name="main_tasksButton">Child Tasks</string>
    <string name="main_addChildButton">Add Child</string>
    <string name="title_activity_main2">MainActivity</string>
    <string name="coin_toolbarTitle">Toss a Coin</string>
    <string name="coin_heads">HEADS</string>
    <string name="coin_tails">TAILS</string>
    <string name="coin_childTurnText">Turn to choose:</string>
    <string name="coin_viewHistoryBtn">View Coin Flip History</string>
    <string name="coin_flipAgainBtn">Toss Again</string>
    <string name="coin_chooseChildBtn">Choose Child</string>
    <string name="coin_childQueueLabel">Your Children:</string>
    <string name="coin_chooseNoneBtn">Toss Without Child</string>
    <string name="coin_dialogTitle">Choose a Child</string>
    <string name="coin_dialogCancel">Use Default</string>
    <string name="children_toolbarTitle">Your Children</string>
    <string name="addChild_toolbarTitle">Enter Child Info</string>
    <string name="FlipHistory_allBtn">All Children</string>
    <string name="FlipHistory_currentBtn">Picking Child</string>
    <string name="FlipHistory_resultText">Result %1$s - child %2$s</string>
    <string name="NewChild_setAvatarBtn">Change Avatar</string>
    <string name="childItem_taskCount">Tasks: %1$d</string>
    <string name="child_toolbarTitle">Child Info</string>
    <string name="child_tasksCount">Number of tasks to do: %1$d</string>
    <string name="child_menu_edit">Edit Child</string>
    <string name="child_menu_delete">Delete Child</string>
    <string name="task_toolbarTitle">Task Info</string>
    <string name="task_descLabel">Description:</string>
    <string name="task_childLabel">Assigned Child:</string>
    <string name="taskList_itemName">%1$s \n Assigned to: %2$s</string>
    <string name="taskListItem_childLabel">Assigned to: </string>
    <string name="newTask_toolbarTitle">Enter New Task Info</string>
    <string name="tasks_noChildMessage">No children are Configured</string>

    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="name">Name:</string>
    <string name="andy">Andy</string>
    <string name="edit">EDIT</string>
    <string name="add_new_child_button">Add new child button.</string>
    <string name="toss">Toss</string>
    <string name="choose_head_or_tail">Choose head or tail</string>
    <string name="image_of_coin">Image of coin.</string>
    <string name="start_alarm">Start alarm.</string>
    <string name="alarm_toolbarTitle">Set Timer</string>
    <string name="alarm_timeFormat">%02d:%02d</string>
    <string name="alarm_resetButton">Reset</string>
    <string name="alarm_customOption">Custom</string>
    <string name="alarm_customOptionLabel">Select Time (minutes)</string>
    <string name="stop">STOP</string>
    <string name="notification_title">Practical Parent</string>
    <string name="notification_message">Your childs timeout is over</string>
    <string name="ticker_text">\'\'ticker</string>
    <string name="delete">DELETE</string>
    <string name="turn_on_off_edit_mode">Turn on/off edit mode</string>
    <string name="turn_on_off_delete_mode">Turn on/off delete mode</string>
    <string name="mode_normal"> </string>
    <string name="empty"> </string>
    <string name="mode_edit">Click child name to edit</string>
    <string name="mode_delete">Click child name to delete</string>
    <string name="toss_again">Toss Again</string>
    <string name="task_list">Task List</string>
    <string name="task_name">Task name</string>
    <string name="description">Description</string>
    <string name="put_can_in_to_can_cooler">Put can in to can cooler.</string>
    <string name="first_assign_to">First assign to </string>
    <string name="assigned_to">Assigned to:</string>
    <string name="it_s">It\'s </string>
    <string name="s_turn">\'s turn! </string>
    <string name="mission_completed">Complete Task</string>
    <string name="save_current_task_info">Save current task info</string>
    <string name="edit_current_task">Edit current task</string>
    <string name="developers">Developers</string>
    <string name="copyright">Copyright</string>
    <string name="Help_Page">Help_Page</string>
    <string name="Help_page">Help Page</string>
    <string name="put_cans_into_can_cooler">Put cans into can cooler</string>
    <string name="percentage">%</string>
    <string name="at">at</string>
    <string name="take_a_deep_breath">Take a deep breath</string>
    <string name="deep_breath">Deep Breath</string>

</resources>
